# FastAPIStore

./: .env.example  .env.test  .flake8  Dockerfile  README.md  alembic.ini  docker-compose.test.yaml  docker-compose.yaml  nginx.conf  pyproject.toml  pytest.ini
locust/: locustfile.py
migrations/: env.py
migrations/versions/: 2026_04_12_0319-327f072de688_initial_commit.py  2026_04_12_1950-1b4619ff047c_initial_commit.py  2026_04_12_2030-d657c48fb296_initial_commit.py  2026_04_12_2220-aae5f7e22ff1_initial_commit.py  2026_04_12_2227-00b80869d004_initial_commit.py  2026_04_14_2104-018a28bcf380_initial_commit.py  2026_04_14_2129-74454efd074c_initial_commit.py  2026_04_14_2133-2e898a825a59_initial_commit.py  2026_04_16_1823-9697ad25a280_initial_commit.py  2026_04_16_1949-b1e49e94b745_initial_commit.py  2026_04_16_2123-90db1b1c7d8b_initial_commit.py  2026_04_17_2327-91c88a7508dd_initial_commit.py  2026_04_22_1545-769488531f68_initial_commit.py  2026_04_27_2254-86b110733de1_initial_commit.py  2026_04_28_0008-70d4f1938dd9_initial_commit.py  c40e0284fcb2_initial_commit.py
src/: main.py  tasks.py
src/config/: database.py  logger.py  pagination.py  settings.py  tkq.py
src/crud/: auth.py  cart.py  order.py  product.py  user.py
src/dependencies/: auth.py  permissions.py
src/middlewares/: access_logging.py
src/models/: __init__.py  auth.py  base.py  (+4 more)
tests/: conftest.py  test_auth.py  test_database.py  test_dependencies_auth.py  test_healthcheck.py  test_script_manage_users_role.py  test_scripts_def_settings.py  test_scripts_manage_role_perms.py  test_users.py  utils.py
(+39 files in other folders)
